# smart_file

./: README.md  demo.py  explorer.py  pyproject.toml  requirements.txt
core/: __init__.py  chat_agent.py  explorer.py  model_logic.py
smart_file/: utils.py
smartfile/: demo.py
