[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfile"
version = "0.1.0"
authors = [
  { name="broadfield-dev", email="broadfield-dev@example.com" },
]
description = "A library to perform semantic search on a local filesystem using ChromaDB and sentence transformers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=5.30.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "tqdm>=4.60.0" 
]

[project.urls]
"Homepage" = "https://github.com/broadfield-dev/smartfile"
"Bug Tracker" = "https://github.com/broadfield-dev/smartfile/issues"

[tool.setuptools.packages.find]
where = ["core"]
